--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contacto</title>
+        <title>Iniciar Sesión</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/style.css">
         <script src="assets/js/components.js" defer></script>
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div id="navbar"></div>
-        <main class="container form-container">
+        <main class="container">
             <div id="header"></div>
             <!-- Sección de inicio de sesión -->
             <section class="row justify-content-center">
@@ -29,8 +29,6 @@
                                            name="email"
                                            autocomplete="email"
                                            required>
-                                    
-                                    
                                 </div>
                                 <div class="mb-3">
                                     <label for="password" class="form-label">Contraseña</label>
