--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contacto</title>
+        <title>Crear Cuenta</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/style.css">
         <script src="assets/js/components.js" defer></script>
@@ -14,9 +14,7 @@
         <div id="navbar"></div>
         <main class="container">
             <div id="header"></div>
-            <!-- creación cuenta de usuario -->
-
-            <section class="row g-4 mt-1">
+            <section class="row g-4">
                 <div class="col-12 col-md-4 mx-auto">
                     <article class="card shadow-sm mb-3">
                         <div class="card-body">
@@ -31,6 +29,10 @@
                                     <input type="text" class="form-control" id="lastname" required>
                                 </div>
                                 <div class="mb-3">
+                                    <label for="phone" class="form-label">Teléfono</label>
+                                    <input type="text" class="form-control" id="phone" required>
+                                </div>
+                                <div class="mb-3">
                                     <label for="email" class="form-label">Email</label>
                                     <input type="email" class="form-control" id="email" required>
                                 </div>
@@ -43,23 +45,23 @@
                                            autocomplete="new-password"
                                            minlength="8"
                                            required>
-                                    <div class="form-text">
+                                    <!-- <div class="form-text">
                                         <small class="text-muted">
                                             Debe tener al menos 8 caracteres, incluir mayúsculas, números y símbolos especiales.
                                         </small>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <button type="submit" class="btn btn-primary w-100">Crear Cuenta</button>
                             </form>
                             <p class="mt-3 mb-0 text-center">
-                                ¿Ya tienes cuenta? <a href="login.html">Inicia sesión aquí</a>
+                                ¿Ya tienes cuenta? <a href="login.html">Inicia sesión</a>
                             </p>
                         </div>
                     </article>
                 </div>
             </section>
         </main>
-
+        <!-- footer -->
          <div id="footer"></div>
         <!-- scripts bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
