--- a/lecturas.html
+++ b/lecturas.html
@@ -17,19 +17,18 @@
         <div id="header"></div>
         <div class="row">
             <div class="col-12">
-                <div class="card shadow">
+                <div class="card shadow lecturas-main-card">
                     <div class="card-header bg-primary text-white">
                         <div class="row align-items-center">
                             <div class="col-md-6">
                                 <h4 class="mb-0">
-                                    <span class="me-2">💧</span>
                                     Lecturas de Medidores de Agua
                                 </h4>
                             </div>
                             <div class="col-md-6">
                                 <div class="d-flex justify-content-end gap-2">
                                     <button class="btn btn-light btn-sm" id="btn-exportar" onclick="exportarDatos()">
-                                        <span class="me-1">📊</span>
+                                        <!-- <span class="me-1">📊</span> -->
                                         Exportar
                                     </button>
                                     <button class="btn btn-light btn-sm" id="btn-nueva-lectura" onclick="nuevaLectura()" style="display: none;">
@@ -105,7 +104,7 @@
 
                         <!-- Tabla de lecturas -->
                         <div class="table-responsive">
-                            <table class="table table-striped table-hover">
+                            <table class="table table-striped">
                                 <thead class="table-dark">
                                     <tr>
                                         <th scope="col">ID</th>
