--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
         <script src="assets/js/components.js" defer></script>
         <script src="assets/js/main.js" defer></script>
         <script src="assets/js/validaciones.js" defer></script>
+        <script src="assets/js/login.js" defer></script>
     </head>
     <body>
         <div id="navbar"></div>
