--- a/register.html
+++ b/register.html
@@ -5,10 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Crear Cuenta</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <link rel="stylesheet" href="assets/css/style.css">
         <script src="assets/js/components.js" defer></script>
         <script src="assets/js/main.js" defer></script>
         <script src="assets/js/validaciones.js" defer></script>
+        <script src="assets/js/register.js" defer></script>
     </head>
     <body>
         <div id="navbar"></div>
@@ -19,39 +21,76 @@
                     <article class="card shadow-sm mb-3">
                         <div class="card-body">
                             <h2 class="h5 card-title text-primary">Crear Cuenta</h2>
+                            <p class="text-muted small mb-4">Completa los siguientes datos para crear tu cuenta de cliente</p>
                             <form id="registerForm">
                                 <div class="mb-3">
-                                    <label for="name" class="form-label">Nombre</label>
-                                    <input type="text" class="form-control" id="name" required>
+                                    <label for="name" class="form-label">
+                                        <i class="fas fa-user me-1"></i>Nombre
+                                    </label>
+                                    <input type="text" class="form-control" id="name" name="name" required>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="lastname" class="form-label">Apellido</label>
-                                    <input type="text" class="form-control" id="lastname" required>
+                                    <label for="lastname" class="form-label">
+                                        <i class="fas fa-user me-1"></i>Apellido
+                                    </label>
+                                    <input type="text" class="form-control" id="lastname" name="lastname" required>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="phone" class="form-label">Teléfono</label>
-                                    <input type="text" class="form-control" id="phone" required>
+                                    <label for="phone" class="form-label">
+                                        <i class="fas fa-phone me-1"></i>Teléfono
+                                    </label>
+                                    <input type="text" class="form-control" id="phone" name="phone" placeholder="+56912345678" required>
+                                    <div class="form-text">
+                                        <small class="text-muted">Formato: +56912345678</small>
+                                    </div>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="email" class="form-label">Email</label>
-                                    <input type="email" class="form-control" id="email" required>
+                                    <label for="email" class="form-label">
+                                        <i class="fas fa-envelope me-1"></i>Email
+                                    </label>
+                                    <input type="email" class="form-control" id="email" name="email" required>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="password" class="form-label">Contraseña</label>
-                                    <input type="password" 
-                                           class="form-control" 
-                                           id="password" 
-                                           name="password"
-                                           autocomplete="new-password"
-                                           minlength="8"
-                                           required>
-                                    <!-- <div class="form-text">
+                                    <label for="password" class="form-label">
+                                        <i class="fas fa-lock me-1"></i>Contraseña
+                                    </label>
+                                    <div class="input-group">
+                                        <input type="password" 
+                                               class="form-control" 
+                                               id="password" 
+                                               name="password"
+                                               autocomplete="new-password"
+                                               minlength="6"
+                                               required>
+                                        <button type="button" class="btn btn-outline-secondary" onclick="togglePasswordVisibility('password')">
+                                            <i class="fas fa-eye" id="password-icon"></i>
+                                        </button>
+                                    </div>
+                                    <div class="form-text">
                                         <small class="text-muted">
-                                            Debe tener al menos 8 caracteres, incluir mayúsculas, números y símbolos especiales.
+                                            Mínimo 6 caracteres. Se recomienda incluir mayúsculas, números y símbolos.
                                         </small>
-                                    </div> -->
+                                    </div>
                                 </div>
-                                <button type="submit" class="btn btn-primary w-100">Crear Cuenta</button>
+                                <div class="mb-4">
+                                    <label for="confirmPassword" class="form-label">
+                                        <i class="fas fa-lock me-1"></i>Confirmar Contraseña
+                                    </label>
+                                    <div class="input-group">
+                                        <input type="password" 
+                                               class="form-control" 
+                                               id="confirmPassword" 
+                                               name="confirmPassword"
+                                               autocomplete="new-password"
+                                               required>
+                                        <button type="button" class="btn btn-outline-secondary" onclick="togglePasswordVisibility('confirmPassword')">
+                                            <i class="fas fa-eye" id="confirmPassword-icon"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                                <button type="submit" class="btn btn-primary w-100" id="submitBtn">
+                                    <i class="fas fa-user-plus me-2"></i>Crear Cuenta
+                                </button>
                             </form>
                             <p class="mt-3 mb-0 text-center">
                                 ¿Ya tienes cuenta? <a href="login.html">Inicia sesión</a>
